fixes layout issues

--- a/games/ftk/index.css
+++ b/games/ftk/index.css
@@ -45,9 +45,13 @@ main {
 #play_button {
     text-align: center;
     font-family:'Caveat Brush';
+    width:100%;
 }
-
+#banner_image {
+    position:absolute;
+}
 #play_button {
+    position:absolute;
     background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
     -webkit-background-clip: text;
     background-clip: text;
@@ -68,6 +72,10 @@ main {
     left:25%;
     width:50%;
     visibility:hidden;
+}
+#game_container {
+    width:100%;
+    height:100%;
 }
 .score {
     color:white;
@@ -91,6 +99,7 @@ main {
     top:10%;
 }
 #fullscreen_button, #exit_game_button{
+    position:absolute;
     right:0px;
     height:100%;
 }
